2011-04-08  Sho Nakatani <lay.sakura@gmail.com>

	* doc-view.el (doc-view-fit-width-to-window)
	(doc-view-fit-height-to-window, doc-view-fit-page-to-window): New
	functions for fitting the shown image to the Emacs window size.
	(doc-view-mode-map): Add bindings for the new functions.

2011-03-24  Juanma Barranquero  <lekktu@gmail.com>

	* vc-annotate.el (vc-annotate-show-log-revision-at-line):
	Fix typo in docstring.

2011-04-08  Eli Zaretskii  <eliz@gnu.org>

	* files.el (file-size-human-readable): Produce one digit after
	decimal, like "ls -lh" does.

	* ls-lisp.el (ls-lisp-format-file-size): Allow for 7 characters in
	the file size representation.

	* simple.el (list-processes): If async subprocesses are not
	available, error out with a clear error message.

2011-04-08  Chong Yidong  <cyd@stupidchicken.com>

	* help.el (help-form-show): New function, to be called from C.
	Put help-form output in a buffer named differently than *Help*.

2011-04-08  Eli Zaretskii  <eliz@gnu.org>

	* files.el (file-size-human-readable): New function.

	* ls-lisp.el (ls-lisp-format-file-size): Use it, instead of
	computing the representation inline.  Don't require `cl'.

2011-04-08  Glenn Morris  <rgm@gnu.org>

	* man.el (Man-page-header-regexp): Solaris < 2.6 no longer supported.

	* net/browse-url.el (browse-url-firefox):
	Test system-type, not system-configuration.

	* vc/log-edit.el (log-edit-empty-buffer-p): New function.
	(log-edit-insert-cvs-template, log-edit-insert-cvs-rcstemplate):
	Use log-edit-empty-buffer-p.  (Bug#7598)

	* net/rlogin.el (rlogin-process-connection-type): Simplify.
	(rlogin-mode-map): Initialize in the defvar.
	(rlogin): Use ignore-errors.

	* replace.el (occur-mode-map): Some fixes for menu items.

2011-04-07  Aaron S. Hawley  <aaron.s.hawley@gmail.com>

	* play/morse.el (denato-region): Handle varying case.  (Bug#8386)

2011-04-06  Chong Yidong  <cyd@stupidchicken.com>

	* emacs-lisp/cconv.el (cconv--analyse-use): Ignore "ignored" when